--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="form-group col-md-6">
             <label for="payslipMonth">Payslip Month:</label>
             <input
-              type="month"
+              type="date"
               class="form-control"
               id="payslipMonth"
               required
@@ -37,6 +37,8 @@
               placeholder="Start typing a name..."
               required
             />
+            <div id="employeeDropdown"></div>
+
             <div id="autocomplete-list" class="autocomplete-items"></div>
           </div>
           <div class="form-group col-md-6">
@@ -64,6 +66,7 @@
             <label for="tax">Nascorp Tax (%):</label>
             <input type="number" class="form-control" id="tax" required />
           </div>
+
           <div class="form-group col-md-6">
             <label for="conversionRate">Liberian Dollar Conversion Rate:</label>
             <input
@@ -73,6 +76,33 @@
               step="0.01"
               value="160"
               required
+            />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="usdPercentage">Percentage for USD Net Pay:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="usdPercentage"
+              value="70"
+              min="0"
+              max="100"
+              step="1"
+              onchange="updateNetPay()"
+            />
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="lrdPercentage">Percentage for LRD Net Pay:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="lrdPercentage"
+              value="30"
+              min="0"
+              max="100"
+              step="1"
+              onchange="updateNetPay()"
             />
           </div>
         </div>
@@ -96,7 +126,7 @@
           onclick="updateConversionRate()"
         >
           Update Conversion Rate
-        </button id="updateRateBtn">
+        </button>
         <button
           type="button"
           class="btn btn-danger btn-block"
@@ -105,6 +135,18 @@
           Clear Inputs
         </button>
       </form>
+
+      <!-- Loading Spinner and Generation Completion Message -->
+      <div id="loading-container" class="text-center">
+        <div
+          class="modern-spinner"
+          id="loading-spinner"
+          style="display: none"
+        ></div>
+        <div class="completed-message" id="generation-completed">
+          ✅ Payslip Generation Completed!
+        </div>
+      </div>
 
       <div id="payslip" class="hidden mt-5 glass">
         <div class="header">
@@ -150,7 +192,13 @@
           <button id="sendEmailBtn" class="btn btn-warning mb-2">
             Send Email
           </button>
-          <button id="printPayslipBtn" onclick="printPayslip()" class="btn-primary">Print Payslip</button>
+          <button
+            id="printPayslipBtn"
+            onclick="printPayslip()"
+            class="btn-primary"
+          >
+            Print Payslip
+          </button>
         </div>
       </div>
     </div>
@@ -159,14 +207,13 @@
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-firestore-compat.js"></script>
     <script src="scripts.js"></script>
-     <!-- Footer -->
-     <footer>
+    <!-- Footer -->
+    <footer>
       <p>
         Created by Emmanuel Cheeseman - Staff at the National Election
         Commission (NEC) of Liberia
       </p>
       <p>&copy; 2024 NEC Liberia. All rights reserved.</p>
     </footer>
-
   </body>
 </html>
