--- a/login.html
+++ b/login.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Manifest -->
+    <link rel="manifest" href="manifest.json" />
+    <!-- Optional: icon for mobile browsers -->
+    <link rel="icon" href="windows.ico" type="image/x-icon" />
+    <meta name="theme-color" content="#4bb2d6" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Login - Payslip App</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -14,32 +20,37 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        background: linear-gradient(to right, #74ebd5, #acb6e5);
+        min-height: 100vh;
         margin: 0;
+        background: linear-gradient(to right, #74ebd5, #acb6e5);
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
 
-      .container {
-        flex: 1; /* Adjusts height so content and footer are balanced */
+      .login-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
+        flex: 1;
       }
 
       .login-form {
         background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(12px);
         border-radius: 15px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         padding: 3rem;
-        width: 400px; /* Increased width */
+        width: 100%;
+        max-width: 400px;
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
         animation: fadeIn 1s ease-out;
       }
 
       .login-form h2 {
+        text-align: center;
         margin-bottom: 1.5rem;
         color: #007bff;
-        font-size: 24px;
+        font-weight: 600;
+        font-size: 1.5rem;
       }
 
       .form-group label {
@@ -49,10 +60,11 @@
       .btn-primary {
         background-color: #007bff;
         border: none;
-        border-radius: 5px;
-        padding: 10px;
+        border-radius: 8px;
+        padding: 12px;
         font-size: 16px;
-        cursor: pointer;
+        font-weight: 500;
+        width: 100%;
         transition: all 0.3s ease;
       }
 
@@ -60,9 +72,11 @@
         background-color: #0056b3;
       }
 
-      .btn-primary:focus {
-        box-shadow: none;
-        outline: none;
+      .error-message {
+        color: #ff6b6b;
+        font-size: 0.9rem;
+        margin-top: 0.5rem;
+        display: none;
       }
 
       @keyframes fadeIn {
@@ -79,56 +93,66 @@
       .logo {
         display: block;
         margin: 0 auto 20px auto;
-        width: 100px; /* Adjust size as needed */
+        width: 100px;
       }
 
-      /* Footer Styling */
       footer {
         background-color: rgba(0, 0, 0, 0.2);
         padding: 10px;
         text-align: center;
         color: white;
         font-size: 14px;
-        position: absolute;
-        bottom: 0;
         width: 100%;
       }
+
+      @media (max-width: 500px) {
+        .login-form {
+          padding: 2rem;
+          width: 90%;
+        }
+      }
     </style>
+
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-firestore-compat.js"></script>
+    <script src="firebase-config.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="login-form shadow">
+    <div class="login-container">
+      <div class="login-form">
         <img src="nec.png" alt="Logo" class="logo" />
-        <h2 class="text-center">PAY SLIP APPLICATION</h2>
-        <form id="loginForm">
+        <h2>Login to Payslip App</h2>
+
+        <form id="loginForm" onsubmit="return false;">
           <div class="form-group">
-            <label for="loginEmail">Email:</label>
-            <input type="email" class="form-control" id="loginEmail" required />
+            <label for="loginEmail">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="loginEmail"
+              placeholder="Enter your email"
+              required
+            />
           </div>
           <div class="form-group">
-            <label for="loginPassword">Password:</label>
+            <label for="loginPassword">Password</label>
             <input
               type="password"
               class="form-control"
               id="loginPassword"
+              placeholder="Enter your password"
               required
             />
           </div>
-          <button
-            type="button"
-            class="btn btn-primary btn-block"
-            onclick="loginUser()"
-          >
+          <div class="error-message" id="loginError"></div>
+          <button type="submit" class="btn btn-primary" onclick="loginUser()">
             Login
           </button>
         </form>
       </div>
     </div>
 
-    <!-- Footer -->
     <footer>
       <p>
         Created by Emmanuel Cheeseman - Staff at the National Election
@@ -138,24 +162,41 @@
     </footer>
 
     <script>
-      // Firebase login function
       async function loginUser() {
-        const email = document.getElementById("loginEmail").value;
-        const password = document.getElementById("loginPassword").value;
+        const email = document.getElementById("loginEmail").value.trim();
+        const password = document.getElementById("loginPassword").value.trim();
+        const errorEl = document.getElementById("loginError");
+        errorEl.style.display = "none";
+
+        if (!email || !password) {
+          errorEl.innerText = "Please enter both email and password.";
+          errorEl.style.display = "block";
+          return;
+        }
 
         try {
-          const userCredential = await firebase
-            .auth()
-            .signInWithEmailAndPassword(email, password);
-          alert("Login successful!");
-          // Redirect to the main application page
-          window.location.href = "index.html"; // Change 'index.html' to the main page of your application
-        } catch (error) {
-          console.error("Error logging in:", error);
-          alert("Failed to login. Please check your credentials.");
+          await firebase.auth().signInWithEmailAndPassword(email, password);
+          // Redirect to main application
+          window.location.href = "index.html";
+        } catch (err) {
+          console.error(err);
+          errorEl.innerText =
+            "Login failed. Please check your email and password.";
+          errorEl.style.display = "block";
         }
       }
     </script>
-    <script src="scripts.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("sw.js")
+            .then((reg) => console.log("Service Worker registered", reg))
+            .catch((err) =>
+              console.error("Service Worker registration failed", err)
+            );
+        });
+      }
+    </script>
   </body>
 </html>
